--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,15 @@
   h2 {
     @apply text-xl;
   }
+}
 
+.line {
+  fill: none;
+  stroke: #ffab00;
+  stroke-width: 3;
+}
+
+.dot {
+  fill: #ffab00;
+  stroke: #fff;
 }
