--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,19 @@
   }
 
   h1 {
-    @apply text-2xl;
+    @apply text-2xl mt-8;
   }
 
   h2 {
-    @apply text-xl;
+    @apply text-xl mt-4;
   }
 
   p {
-    @apply text-lg text-justify;
+    @apply text-lg text-justify mt-2;
+  }
+
+  a {
+    @apply text-primary underline;
   }
 }
 
